--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Maxwell Patwardhan</h1>
-						<p>Electrical hardware engineer specializing in PCB design and robotics</p>
+						<h1>Maia Traub</h1>
+						<p>Embedded electrical engineer with an emphasis in robotics and mechatronics</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -38,11 +38,11 @@
 							<li><a href="elements.html">About Me</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://github.com/MaxPatwardhan" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/maxwell-patwardhan" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/maia-traub-5765ba201/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</nav>
-
+					<!--
 					<div id="myPopup" class="popup">
 						<div class="popup-content">
 						<span class="close-button">&times;</span>
@@ -53,22 +53,11 @@
 							it is <b>strongly</b> recommended that you view this site on a desktop browser.
 						</p>
 						</div>
-					  </div>
+					  </div>  Nav -->
 				<!-- Main -->
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2><a href="rds.html">Haptic/Robot Telemanipulation System</h2>
-									<h3>Argonne National Laboratory, Northwestern University</h3>
-									<p class="center-date">January 2024 - June 2024</p></a>
-								</header>
-								<a href="rds.html" class="image main"><img src="images/rds/power/pwernoBG.png" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="rds.html" class="button large">Discover More</a></li>
-								</ul>
-							</article>
 
 							<article class="post featured">
 								<header class="major">
@@ -82,11 +71,23 @@
 								</ul>
 							</article>
 
+							<article class="post featured">
+								<header class="major">
+									<h2><a href="rds.html">Haptic/Robot Telemanipulation System</h2>
+									<h3>Argonne National Laboratory, Northwestern University</h3>
+									<p class="center-date">January 2024 - June 2024</p></a>
+								</header>
+								<a href="rds.html" class="image main"><img src="images/rds/power/pwernoBG.png" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="rds.html" class="button large">Discover More</a></li>
+								</ul>
+							</article>
+
 
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="metamaterial.html">Robotic Metamaterial</h2>
-									<h3>Master's Thesis in Soft Robotics, Northwestern University</h3>
+									<h2><a href="metamaterial.html">EE327 Electronic Systems Design</h2>
+									<h3>Fill out</h3>
 									<p class="center-date">November 2023 - June 2024</p></a>
 								</header>
 								<a href="metamaterial.html" class="image main"><img src="images/metamaterial/dome.jpg" alt="" /></a>
@@ -95,20 +96,20 @@
 								</ul>
 							</article>
 
-							<!--<article class="post featured">
+							<article class="post featured">
 								<header class="major">
-									<h2><a href="aadfr.html">Aircraft-Automatic Deployable Flight Recorder</h2>
-									<h3>Boeing Inc., University of Colorado Boulder</h3>
-									<p class="center-date"><i>September 2022 - May 2023</i></p></a>
+									<h2><a href="jackinbox.html">Jack-In-Box Lagrangian Physics Simulation</h2>
+									<h3>Personal Project</h3>
+									<p class="center-date"><i>April 2024 - June 2024</i></p></a>
 								</header>
-								<a href="aadfr.html" class="image main"><img src="images/aadfr/BodyCAD.png" alt="" /></a>
+								<a href="jackinbox.html" class="image main"><img src="images/jackinbox/SC.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="aadfr.html" class="button">Discover More</a></li>
+									<li><a href="jackinbox.html" class="button">Discover More</a></li>
 								</ul>
-							</article>-->
+							</article>
 
 
-						<!-- Posts -->
+						<!-- Posts 
 							<section class="posts">
 
 								<article>
@@ -133,17 +134,7 @@
 										<li><a href="jackinbox.html" class="button">Discover More</a></li>
 									</ul>
 								</article>
-								<!-- To be completed later.
-								<article>
-									<header>
-										<h2><a href="hlz.html">Helicopter Landing Zone Selection Using AI/ML</a></h2>
-									</header>
-									<a href="hlz.html" class="image fit"><img src="images/sobel/edge.jpg" alt="" /></a>
-									<ul class="actions special">
-										<li><a href="hlz.html" class="button">Discover More</a></li>
-									</ul>
-								</article>
-								-->
+	
 								<article>
 									<header>
 										<h2><a href="fourier.html">Fourier Vibration Analysis of Cantilevered Beams</h2>
@@ -166,7 +157,7 @@
 									</ul>
 								</article>
 
-							</section>
+							</section> -->
 
 					</div>
 
@@ -176,14 +167,14 @@
 					<section>
 						<div style="display: flex; align-items: center; gap: 10px;">
 							<h3 style="margin: 1;">Email:</h3>
-							<p style="margin: 1;"><a href="mailto:maxwellpatwardhan@gmail.com">maxwellpatwardhan@gmail.com</a></p>
+							<p style="margin: 1;"><a href="mailto:maia.traub@gmail.com">maia.traub@gmail.com</a></p>
 						</div>
 						
 						<div style="display: flex; align-items: center; gap: 10px;">
 							<h3 style="margin: 0;">Other Pages:</h3>
 							<ul class="icons alt" style="display: flex; gap: 10px; list-style: none; padding: 0; margin: 0;">
-								<li><a href="https://github.com/MaxPatwardhan" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/maxwell-patwardhan" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/maiamenascetraub" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/maia-traub-5765ba201/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</div>
 					</section>
