--- a/elements.html
+++ b/elements.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>About Me - Max Patwardhan</title>
+		<title>About Me - Maia Traub</title>
 		<link rel="icon" type="image/png" href="images/personal/icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -29,7 +29,7 @@
 					<li><a href="https://www.linkedin.com/in/maxwell-patwardhan" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 				</ul>
 			</nav>
-			<div id="myPopup" class="popup">
+			<!--<div id="myPopup" class="popup">
 				<div class="popup-content">
 				  <span class="close-button">&times;</span>
 				<h3>Not so good a listener, are you?</h3>
@@ -38,7 +38,7 @@
 					Enjoy your sub-optimal browsing experience 😉
 				</p>
 				</div>
-			  </div>
+			  </div> -->
 
 			<!-- Main -->
 			<div id="main">
