--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 	<head>
-		<title>Maxwell Patwardhan</title>
-		<link rel="icon" type="image/png" href="images/personal/icon.png">
+		<title>Maia's Portfolio'</title>
+		<link rel="icon" type="image/png" href="images/esd/betterCamnoBG.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
 							<!--<li><a href="generic.html">Resume</a></li>-->
-							<li><a href="elements.html">About Me</a></li>
+							<!--<li><a href="elements.html">About Me</a></li> -->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -62,8 +62,8 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="webcam.html">Wireless Web Camera</a></h2>
-									<h3>Personal Project</h3>
-									<p class="center-date">January 2024 - March 2024</p>
+									<h3><a href="webcam.html">Personal Project</a></h3>
+									<p class="center-date"><a href="webcam.html">January 2024 - March 2024</a></p>
 								</header>
 								<a href="webcam.html" class="image main"><img src="images/esd/betterCamnoBG.png" alt="" /></a>
 								<ul class="actions special">
@@ -73,9 +73,9 @@
 
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="rds.html">Haptic/Robot Telemanipulation System</h2>
-									<h3>Argonne National Laboratory, Northwestern University</h3>
-									<p class="center-date">January 2024 - June 2024</p></a>
+									<h2><a href="rds.html">Haptic/Robot Telemanipulation System</a></h2>
+									<h3><a href="rds.html">Argonne National Laboratory, Northwestern University</a></h3>
+									<p class="center-date"><a href="rds.html">January 2024 - June 2024</a></p>
 								</header>
 								<a href="rds.html" class="image main"><img src="images/rds/power/pwernoBG.png" alt="" /></a>
 								<ul class="actions special">
@@ -83,7 +83,7 @@
 								</ul>
 							</article>
 
-
+							<!--
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="metamaterial.html">EE327 Electronic Systems Design</h2>
@@ -95,19 +95,18 @@
 									<li><a href="metamaterial.html" class="button large">Discover More</a></li>
 								</ul>
 							</article>
-
+							-->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="jackinbox.html">Jack-In-Box Lagrangian Physics Simulation</h2>
-									<h3>Personal Project</h3>
-									<p class="center-date"><i>April 2024 - June 2024</i></p></a>
+									<h2><a href="jackinbox.html">Jack-In-Box Lagrangian Physics Simulation</a></h2>
+									<h3><a href="jackinbox.html">Personal Project</a></h3>
+									<p class="center-date"><i><a href="jackinbox.html">April 2024 - June 2024</i></p></a>
 								</header>
 								<a href="jackinbox.html" class="image main"><img src="images/jackinbox/SC.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="jackinbox.html" class="button">Discover More</a></li>
 								</ul>
 							</article>
-
 
 						<!-- Posts 
 							<section class="posts">
