--- a/rds.html
+++ b/rds.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Haptic/Robot Telemanipulation System</title>
-    <link rel="icon" type="image/png" href="images/personal/icon.png">
+    <link rel="icon" type="image/png" href="images/esd/betterCamnoBG.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -22,12 +22,11 @@
         <nav id="nav">
             <ul class="links">
                 <li><a href="index.html">Projects</a></li>
-
-                <li><a href="elements.html">About Me</a></li>
+                <!--<li><a href="elements.html">About Me</a></li>-->
             </ul>
             <ul class="icons">
-                <li><a href="https://github.com/MaxPatwardhan" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="https://www.linkedin.com/in/maxwell-patwardhan" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://www.linkedin.com/in/maia-traub-5765ba201" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
             </ul>
         </nav>
 
