--- a/webcam.html
+++ b/webcam.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>MaxPatwardhan.github.io - Webcam</title>
+    <title>Webcam</title>
     <link rel="icon" type="image/png" href="images/personal/icon.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -24,11 +24,11 @@
         <nav id="nav">
             <ul class="links">
                 <li><a href="index.html">Projects</a></li>
-                <li><a href="elements.html">About Me</a></li>
+                <!--<li><a href="elements.html">About Me</a></li>-->
             </ul>
             <ul class="icons">
-                <li><a href="https://github.com/MaxPatwardhan" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="https://www.linkedin.com/in/maxwell-patwardhan" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://www.linkedin.com/in/maia-traub-5765ba201" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
             </ul>
         </nav>
 
@@ -40,7 +40,7 @@
                 <header class="major">
                     <h2>Wireless Webcam</h2>
                     <h3>Personal Project</h3>
-                    <p>January 2024 - March 2024</p>
+                    <p>January 2024 - April 2024</p>
                     
                 </header>
             </section>
@@ -64,7 +64,7 @@
                 <h2>Design Overview</h2>
 
 
-                <p><span class="image right"><img src="images/esd/camcomplete.jpg" alt="" style="max-width: 800px; height: auto;"/></span> The main difficulty in this project was the design of the camera PCB, which integrates the ATSAM4S8B, 
+                <p><span class="image right"><img src="images/esd/IMG_1526.JPG" alt="" style="max-width: 800px; height: auto;"/></span> The main difficulty in this project was the design of the camera PCB, which integrates the ATSAM4S8B, 
                     the OV2640 camera module, and the ESP32 for WiFi communication. I tried to keep the circuit board compact, while still being fairly easy to assemble.</p>
                 <p>Special attention was given to routing high-speed SPI and UART signals between the MCU and the WiFi module. Separate ground planes were utilized to reduce noise, and 
                     bypass capacitors were placed near <b>V<sub>cc</sub></b> and power pins to act as a low pass filter. The PCB includes debug headers for USART and SPI communication, allowing 
@@ -241,8 +241,8 @@
                     <div class="row gtr-50 gtr-uniform">
                         <div class="col-6">
                             <span class="image fit">
-                                <img src="images/esd/itsME.jpg" alt="PCB Design (EagleCAD)" class="gallery-item" data-description="Oh hello there" />
-                                <p class="caption">Webcam Streaming!</p>
+                                <img src="images/esd/betterCamnoBG.png" alt="PCB Design (EagleCAD)" class="gallery-item" data-description="Oh hello there" />
+                                <p class="caption">Board Closeup</p>
                             </span>
                         </div>
                         <div class="col-6">
@@ -302,7 +302,7 @@
         <footer id="footer">
             <section>
                 <h3>Contact</h3>
-                <p>Email: <a href="mailto:maxwellpatwardhan@gmail.com">maxwellpatwardhan@gmail.com</a></p>
+                <p>Email: <a href="mailto:maia.traub@gmail.com">maia.traub@gmail.com</a></p>
             </section>
         </footer>
 
