removed some media

--- a/rds.html
+++ b/rds.html
@@ -606,7 +606,7 @@
         <footer id="footer">
             <section>
                 <h3>Contact</h3>
-                <p>Email: <a href="mailto:maxwellpatwardhan@gmail.com">maxwellpatwardhan@gmail.com</a></p>
+                <p>Email: <a href="mailto:maia.traub@gmail.com">maia.traub@gmail.com</a></p>
             </section>
         </footer>
 
