--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Maia Traub</h1>
-						<p>Embedded electrical engineer with an emphasis in robotics and mechatronics</p>
+						<p>Mechanical and electrical engineer with an emphasis in mechatronics and embedded systems</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
