--- a/elements.html
+++ b/elements.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>About Me - Maia Traub</title>
-		<link rel="icon" type="image/png" href="images/personal/icon.png">
+		<link rel="icon" type="image/png" href="images/esd/betterCamnoBG.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,8 +25,8 @@
 					<li class="active"><a href="about.html">About Me</a></li>
 				</ul>
 				<ul class="icons">
-					<li><a href="https://github.com/MaxPatwardhan" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/maxwell-patwardhan" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/maia-traub-5765ba201" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 				</ul>
 			</nav>
 			<!--<div id="myPopup" class="popup">
@@ -62,24 +62,18 @@
 					<section style="margin-top: 50px; margin-bottom: 50px;">
 						<h2>Education </h2>
 						<header>
-							<h3>Master of Science in Mechanical Engineering</h3>
+							<h3>Bachelor Science in Mechanical Engineering</h3>
 							<p><b>Northwestern University</b><br>
-							<span style="font-style: normal;">Graduated June of 2024; Emphasis in Robotics &amp; Electronics; <b>GPA: 3.97</b></span><br>
-							<span style="font-style: normal;"><a href="metamaterial.html">Master's Thesis: <i>Design and Deployment of Multistable Robotic Metamaterial</i></a></span></p>			
-						</header>
-						<header>
-							<h3>Bachelor of Science in Mechanical Engineering</h3>
-							<p><b>University of Colorado at Boulder</b><br>
-							<span style="font-style: normal;">Graduated Cum Laude in May of 2023 with Engineering Honors; Minor in Applied Mathematics; <b>GPA 3.73</b></span></p>
+							<span style="font-style: normal;">Graduated June of 2024; Concentration in Robotics; <b>GPA: 3.8</b></span><br>			
 						</header>
 						
 						<h2>Skills & Expertise</h2>
 						<ul>
 							<li><strong>Hardware Design: </strong> Altium Designer, Eagle PCB, Schematic Capture, PCB Layout, Component Selection</li>
-							<li><strong>Power Electronics:</strong> DC-DC Converters, Regulator Topology, LDO's, Battery and Power Management Systems</li>
+							<!--<li><strong>Power Electronics:</strong> DC-DC Converters, Regulator Topology, LDO's, Battery and Power Management Systems</li>-->
 							<li><strong>Programming:</strong> Python, C++, C#, C, Java, MATLAB, Simulink LabVIEW, HTML, Git</li>
 							<li><strong>Networking &amp; Communication:</strong> SPI, I<sup>2</sup>C, UART, USB, CAN, MQTT, RF/Wi-Fi Interfaces</li>
-							<li><strong>Mechanical Engineering:</strong> Solidworks, NX, OnShape, 3D Printing, Machining</li>
+							<li><strong>CAD &amp; Fabrication:</strong> Solidworks, NX, OnShape, CNC, Lathe, Milling, 3D Printing</li>
 							<li><strong>Methodologies:</strong> Agile, DFM, DFT, Design for Signal Integrity</li>
 						</ul>
 					</section>
@@ -122,12 +116,12 @@
 						<p>I'm always open to discussing new opportunities! Feel free to reach out to me at:</p>
 						<div style="display: flex; align-items: center; gap: 10px;">
 							<h3 style="margin: 0;">Email:</h3>
-							<p style="margin: 0;"><a href="mailto:maxwellpatwardhan@gmail.com">maxwellpatwardhan@gmail.com</a></p>
+							<p style="margin: 0;"><a href="mailto:maia.traub@gmail.com">maia.traub@gmail.com</a></p>
 						</div>
 						<p>Or connect with me on:</p>
 						<ul class="icons alt" style="display: flex; gap: 10px; list-style: none; padding: 0; margin: 0;">
-							<li><a href="https://github.com/MaxPatwardhan" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/maxwell-patwardhan" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/maiamenascetraub" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/maia-traub-5765ba201" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</section>
 				</section>
@@ -136,7 +130,7 @@
 			<!-- Footer -->
 			<footer id="footer">
 				<section>
-					<p>&copy; Max Patwardhan
+					<p>&copy; Maia Traub
 				</section>
 			</footer>
 
