--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<!--<li><a href="elements.html">About Me</a></li> -->
 						</ul>
 						<ul class="icons">
-							<li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<!--<li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>-->
 							<li><a href="https://www.linkedin.com/in/maia-traub-5765ba201/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</nav>
@@ -172,7 +172,7 @@
 						<div style="display: flex; align-items: center; gap: 10px;">
 							<h3 style="margin: 0;">Other Pages:</h3>
 							<ul class="icons alt" style="display: flex; gap: 10px; list-style: none; padding: 0; margin: 0;">
-								<li><a href="https://github.com/maiamenascetraub" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<!--<li><a href="https://github.com/maiamenascetraub" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
 								<li><a href="https://www.linkedin.com/in/maia-traub-5765ba201/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</div>
