--- a/webcam.html
+++ b/webcam.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Webcam</title>
-    <link rel="icon" type="image/png" href="images/personal/icon.png">
+    <link rel="icon" type="image/png" href="images/esd/betterCamnoBG.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="Wireless Webcam project by Max Patwardhan, featuring a custom PCB, ATSAM4S8B, ESP32, and live video streaming.">
@@ -27,7 +27,7 @@
                 <!--<li><a href="elements.html">About Me</a></li>-->
             </ul>
             <ul class="icons">
-                <li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                <!--<li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>-->
                 <li><a href="https://www.linkedin.com/in/maia-traub-5765ba201" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
             </ul>
         </nav>
