--- a/jackinbox.html
+++ b/jackinbox.html
@@ -25,7 +25,7 @@
                 <!-- <li><a href="elements.html">About Me</a></li> -->
             </ul>
             <ul class="icons">
-                <li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                <!--<li><a href="https://github.com/maiamenascetraub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>-->
                 <li><a href="https://www.linkedin.com/in/maia-traub-5765ba201" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
             </ul>
         </nav>
