--- a/rds.html
+++ b/rds.html
@@ -55,10 +55,10 @@
                 
                 <h2>Background</h2>
                     <p>
-                        This fast-paced project, developed as part of Northwestern University's selective capstone program in collaboration with Argonne National Laboratory, 
-                        focused on designing and implementing a sophisticated haptic-robot telemanipulation system. Argonne National Laboratory desired a system that would allow 
-                        their chemists to remotely work with radioactive materials, necessitating a highly precise-yet-strong haptic/robot system. Our solution enables users to control a robotic finger and thumb
-                        using a haptic exoskeleton comprised of a finger and thumb. I drove the rapid, full-stack design and development of the project's electronics, ultimately providing a highly reliable and easily integrable solution.
+                       This fast-paced project, developed through Northwestern University's selective capstone program in collaboration with Argonne National Laboratory, focused on creating a haptic-robot telemanipulation system for remote handling
+			    of hazardous materials. The goal was to enable chemists to safely and precisely control robotic fingers from a distance using a wearable exoskeleton. I led the mechanical design, fabrication, and iterative prototyping of
+			    a haptic thumb mechanism with two actuated and one passive degree of freedom. Over a 20-week development cycle, I optimized the design for structural performance, manufacturability, and ease of assembly, using CNC 
+			    machining, waterjet cutting, and 3D printing. I also co-developed and integrated custom PCBs for power regulation and CAN-based communication, supporting full-system testing and deployment.
                     </p>
                     <h2>Image Gallery</h2>
                     <div class="box alt">
