--- a/rds.html
+++ b/rds.html
@@ -141,7 +141,19 @@
                       </div>
                   </div>
 
-                    <div>
+		     <div>
+                        <h2>Haptic Thumb Overview</h2>
+                            <p> 
+                                The goal of this project was to create a haptic interface for a robotic thumb to be used in a laboratory setting.  
+				    Given a constraint of two actuated degrees of freedom, we split the thumb motion into two groups: CMC ‘waggling’ 
+				    or flexion and extension of the thumb and MCP/IP curling.  These two degrees of freedom make up two subsystems of 
+				    our design as well as a third subsystem consisting of the thimble holster for a person’s thumb to fit into which has 
+				    a compliant degree of freedom for user comfort.  The full system is shown in the figures below.
+
+                            </p>
+                    </div>
+		    
+		    <div>
                         <h2>System Overview</h2>
                             <p> 
                                 Our team meticulously designed the mechanical, electrical, and software components of this project within just five months, ultimately developing a novel approach 
