--- a/rds.html
+++ b/rds.html
@@ -140,18 +140,6 @@
                           <span id="lightbox-close">&times;</span>
                       </div>
                   </div>
-
-		     <div>
-                        <h2>Haptic Thumb Overview</h2>
-                            <p> 
-                                The goal of this project was to create a haptic interface for a robotic thumb to be used in a laboratory setting.  
-				    Given a constraint of two actuated degrees of freedom, we split the thumb motion into two groups: CMC ‘waggling’ 
-				    or flexion and extension of the thumb and MCP/IP curling.  These two degrees of freedom make up two subsystems of 
-				    our design as well as a third subsystem consisting of the thimble holster for a person’s thumb to fit into which has 
-				    a compliant degree of freedom for user comfort.  The full system is shown in the figures below.
-
-                            </p>
-                    </div>
 		    
 		    <div>
                         <h2>System Overview</h2>
@@ -186,7 +174,9 @@
                 
                 <hr />
 
-                <h2 style="text-align: center; font-size: 2.5rem; " ><u>Electrical System</u></h2>
+		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Mehcanical System: Haptic Thumb</u></h2>
+		
+		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Electrical System</u></h2>
                 <h2>Power Board</h2>
                 <div class="box alt">
                     <div class="row gtr-50 gtr-uniform">
