--- a/rds.html
+++ b/rds.html
@@ -174,8 +174,10 @@
                 
                 <hr />
 
+		<div>
 		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Mehcanical System: Haptic Thumb</u></h2>
-		
+		</div>
+		    
 		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Electrical System</u></h2>
                 <h2>Power Board</h2>
                 <div class="box alt">
