--- a/rds.html
+++ b/rds.html
@@ -177,6 +177,17 @@
 		<div>
 		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Mehcanical System: Haptic Thumb</u></h2>
 		</div>
+
+		<div class="box alt">
+                    <div class="row gtr-50 gtr-uniform">
+                        <div class="col-4">
+                            <span class="image fit">
+                                <img src="images/rds/mechanical/ht1.png" alt="" class="gallery-item" data-description="A fully soldered board" />
+                                <p class="caption">Soldered Power Board</p>
+                            </span>
+                        </div>
+                        <div class="col-4">
+		</div>
 		    
 		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Electrical System</u></h2>
                 <h2>Power Board</h2>
