--- a/rds.html
+++ b/rds.html
@@ -182,7 +182,7 @@
                     <div class="row gtr-50 gtr-uniform">
                         <div class="col-4">
                             <span class="image fit">
-                                <img src="images/rds/mechanical/ht1.png" alt="" class="gallery-item" data-description="A fully soldered board" />
+                                <img src="images/rds/mechanical/ht1.png" alt="" class="gallery-item" data-description="Haptic thumb mechanism" />
                                 <p class="caption">Soldered Power Board</p>
                             </span>
                         </div>
