--- a/rds.html
+++ b/rds.html
@@ -186,7 +186,14 @@
                                 <p class="caption">Soldered Power Board</p>
                             </span>
                         </div>
-                        <div class="col-4">
+                    <div class="video-container" style="margin-top: 30px; margin-bottom: 60px;">
+                        <video controls autoplay loop muted playsinline>
+                            <source src="images/rds/mechanical/ezgif-41bb301cbff916.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+
+		     
 		</div>
 		    
 		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Electrical System</u></h2>
