--- a/rds.html
+++ b/rds.html
@@ -178,12 +178,12 @@
 		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Mehcanical System: Haptic Thumb</u></h2>
 		</div>
 
-		<div class="box alt">
+<!-- 		<div class="box alt">
                     <div class="row gtr-50 gtr-uniform">
                         <div class="col-4">
                             <span class="image fit">
-                                <img src="images/rds/mechanical/ht1.png" alt="" class="gallery-item" data-description="Haptic thumb mechanism" />
-                                <p class="caption">Soldered Power Board</p>
+                                <img src="images/rds/mechanical/ht1.png" alt="" class="gallery-item" data-description="haptic thumb mechanism" />
+                                <p class="caption">Haptic Thumb Mechanism </p>
                             </span>
                         </div>
                     <div class="video-container" style="margin-top: 30px; margin-bottom: 60px;">
@@ -191,7 +191,28 @@
                             <source src="images/rds/mechanical/ezgif-41bb301cbff916.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
-                    </div>
+                    </div> -->
+
+
+		 <div class="box alt">
+  			<div class="row gtr-50 gtr-uniform">
+   				<div class="col-6">
+    					<span class="image fit">
+     						<img src="images/rds/mechanical/ht1.png" alt="" class="gallery-item" data-description="Haptic thumb mechanism" />
+     						<p class="caption">Soldered Power Board</p>
+   					 </span>
+   				</div>
+   			<div class="col-6"></div> </div>
+ 		 <div class="row gtr-50 gtr-uniform">
+   			<div class="col-6">
+    				<div class="video-container" style="margin-top: 0px; margin-bottom: 0px;">
+     					<video controls autoplay loop muted playsinline style="width: 100%;">
+      						<source src="images/rds/mechanical/ezgif-41bb301cbff916.mp4" type="video/mp4">
+      						Your browser does not support the video tag.
+     					</video>
+    				</div>
+   			</div>
+   		<div class="col-6"></div> </div>
 
 		     
 		</div>
