--- a/rds.html
+++ b/rds.html
@@ -205,7 +205,7 @@
    			<div class="col-6"></div> </div>
  		 <div class="row gtr-50 gtr-uniform">
    			<div class="col-6">
-    				<div class="video-container" style="margin-top: 0px; margin-bottom: 0px;">
+    				<div class="video-container" style=""width: 60%; height: auto;"">
      					<video controls autoplay loop muted playsinline style="width: 100%;">
       						<source src="images/rds/mechanical/ezgif-41bb301cbff916.mp4" type="video/mp4">
       						Your browser does not support the video tag.
