--- a/rds.html
+++ b/rds.html
@@ -178,6 +178,26 @@
 		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Mehcanical System: Haptic Thumb</u></h2>
 		</div>
 
+		<div class="box alt">
+  		<!-- Image and caption in left column -->
+ 			 <div class="row gtr-50 gtr-uniform">
+    				<div class="col-6">
+     				 <span class="image fit">
+        				<img src="images/rds/mechanical/ht1.png" alt="" class="gallery-item" data-description="Haptic thumb mechanism" />
+        				<p class="caption">Soldered Power Board</p>
+     				 </span>
+    				</div>
+    			<div class="col-6"></div>
+  		</div>
+
+  		<!-- Centered video below, outside grid -->
+  		<div style="display: flex; justify-content: center; margin: 40px 0;">
+    			<video controls autoplay loop muted playsinline style="width: 50%; height: auto;">
+      				<source src="images/rds/mechanical/ezgif-41bb301cbff916.mp4" type="video/mp4">
+      				Your browser does not support the video tag.
+    			</video>
+  		</div>
+		</div>
 <!-- 		<div class="box alt">
                     <div class="row gtr-50 gtr-uniform">
                         <div class="col-4">
@@ -194,7 +214,7 @@
                     </div> -->
 
 
-		 <div class="box alt">
+<!-- 		 <div class="box alt">
   			<div class="row gtr-50 gtr-uniform">
    				<div class="col-6">
     					<span class="image fit">
@@ -215,7 +235,7 @@
    		<div class="col-6"></div> </div>
 
 		     
-		</div>
+		</div> -->
 		    
 		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Electrical System</u></h2>
                 <h2>Power Board</h2>
