--- a/rds.html
+++ b/rds.html
@@ -184,7 +184,7 @@
     				<div class="col-4">
      				 <span class="image fit">
         				<img src="images/rds/mechanical/ht1.png" alt="" class="gallery-item" data-description="Haptic thumb mechanism" />
-        				<p class="caption">Soldered Power Board</p>
+        				<p class="caption">Haptic Thumb Mechanism</p>
      				 </span>
     				</div>
     			<div class="col-4"></div>
