--- a/rds.html
+++ b/rds.html
@@ -188,6 +188,11 @@
      				 </span>
     				</div>
     			<div class="col-4"></div>
+				<span class="image fit">
+                                   <img src="images/rds/mechanical/ht4.jpg" alt="" class="gallery-item" data-description="Model of Robot Thumb" />
+                                   <p class="caption">Robot Thumb</p>
+                               </span>
+                           </div>
   		</div>
 
   		<!-- Centered video below, outside grid -->
