--- a/rds.html
+++ b/rds.html
@@ -183,14 +183,14 @@
  			 <div class="row gtr-50 gtr-uniform">
     				<div class="col-4">
      				 <span class="image fit">
-        				<img src="images/rds/mechanical/ht1.png" alt="" class="gallery-item" data-description="Haptic thumb mechanism" />
-        				<p class="caption">Haptic Thumb Mechanism</p>
+        				<img src="images/rds/mechanical/ht1.png" alt="" class="gallery-item" data-description="Haptic thumb mechanism cad" />
+        				<p class="caption">Haptic Thumb Mechanism CAD</p>
      				 </span>
     				</div>
     			<div class="col-4"></div>
 				<span class="image fit">
-                                   <img src="images/rds/mechanical/ht4.jpg" alt="" class="gallery-item" data-description="Model of Robot Thumb" />
-                                   <p class="caption">Robot Thumb</p>
+                                   <img src="images/rds/mechanical/ht4.jpg" alt="" class="gallery-item" data-description="Haptic thumb mechanism" />
+                                   <p class="caption">Haptic Thumb Mechanism</p>
                                </span>
                            </div>
   		</div>
