--- a/rds.html
+++ b/rds.html
@@ -188,11 +188,11 @@
      				 </span>
     				</div>
     			<div class="col-4"></div>
-				<span class="image fit">
+<!-- 				<span class="image fit">
                                    <img src="images/rds/mechanical/ht4.jpg" alt="" class="gallery-item" data-description="Haptic thumb mechanism" />
                                    <p class="caption">Haptic Thumb Mechanism</p>
                                </span>
-                           </div>
+                           </div> -->
   		</div>
 
   		<!-- Centered video below, outside grid -->
