--- a/rds.html
+++ b/rds.html
@@ -193,6 +193,20 @@
                                    <p class="caption">Haptic Thumb Mechanism</p>
                                </span>
                            </div>
+				 
+			<div class="col-4">
+				<span class="image fit">
+                                   <img src="images/rds/mechanical/ht5.jpg" alt="" class="gallery-item" data-description="Haptic thumb mechanism in use" />
+                                   <p class="caption">Haptic Thumb Mechanism in Use</p>
+                               </span>
+                           </div>
+
+			<div class="col-4">
+				<span class="image fit">
+                                   <img src="images/rds/mechanical/Screenshot 2024-02-16 at 12.04.32 PM.png" alt="" class="gallery-item" data-description="system overview" />
+                                   <p class="caption">System Overview</p>
+                               </span>
+                           </div>
   		</div>
 
   		<!-- Centered video below, outside grid -->
