--- a/rds.html
+++ b/rds.html
@@ -217,6 +217,22 @@
     			</video>
   		</div>
 		</div>
+
+		    <div>
+                        <h2>Cable Routing</h2>
+                            <p> 
+                                The haptic thumb system makes use of three vented screws: one in the CMC subsystem and two in the MCP/IP subsystem. The cable runs through 
+				these screws and is terminated at the other side.  The screws can then be tightened or loosened to tension the systems.
+  
+				The CMC cable is wrapped around the CMC Motor Pulley and is terminated through a screw at one end of the system. The other side of the cable
+				is wired through the CMC plate (illustrated by the dashed pink line below) and is then wired through a vented screw and terminated.
+
+				The MCP/IP cable is wrapped around the MCP/IP Motor Pulley and is wired through the CMC system through the use of several idler pulleys and shafts.
+				These allow for both motors to be placed in the CMC subsystem while providing movement to the MCP/IP subsystem without being affected by movement in the CMC subsystem. 
+				The cable then wraps around the MCP/IP Pulley which actuates the MCP/IP subsystem and then terminated through two vented screws in the MCP/IP Tensioning Block.
+
+                            </p>
+                    </div>
 <!-- 		<div class="box alt">
                     <div class="row gtr-50 gtr-uniform">
                         <div class="col-4">
