--- a/rds.html
+++ b/rds.html
@@ -233,6 +233,18 @@
 
                             </p>
                     </div>
+
+		    <div>
+                        <h2>CAD Models</h2>
+                            <p> 
+                                The full design of the haptic thumb system is shown above.  The motors and connection points between the different subsystems are outlined. 
+				The CMC Side Plates provide a mounting point for the haptic thumb system to connect to the rest of the haptic system. The MCP Side Plates 
+				are attached to the CMC Plate to connect the CMC and MCP/IP systems together. The Phalanx Proxy Plates connect to the compliant Phalanx 
+				Distal Plate to connect the Thimble system to the rest of the haptic system. The Inner and Outer Thimble connect the user to the haptic system. 
+				Different views of the subsystems are shown below to highlight the different parts and features.
+
+                            </p>
+                    </div>
 <!-- 		<div class="box alt">
                     <div class="row gtr-50 gtr-uniform">
                         <div class="col-4">
