--- a/rds.html
+++ b/rds.html
@@ -219,6 +219,17 @@
 		</div>
 
 		    <div>
+                        <h2>Haptic Thumb Overview</h2>
+                            <p> 
+                                The goal of this project was to create a haptic interface for a robotic thumb to be used in a laboratory setting. Given a constraint of two actuated
+				    degrees of freedom, we split the thumb motion into two groups: CMC ‘waggling’ or flexion and extension of the thumb and MCP/IP curling. These two 
+				    degrees of freedom make up two subsystems of our design as well as a third subsystem consisting of the thimble holster for a person’s thumb to fit 
+				    into which has a compliant degree of freedom for user comfort. The full system is shown in the figures below.
+
+                            </p>
+                    </div>
+		    
+		    <div>
                         <h2>Cable Routing</h2>
                             <p> 
                                 The haptic thumb system makes use of three vented screws: one in the CMC subsystem and two in the MCP/IP subsystem. The cable runs through 
