--- a/rds.html
+++ b/rds.html
@@ -221,10 +221,12 @@
 		    <div>
                         <h2>Haptic Thumb Overview</h2>
                             <p> 
-                                The goal of this project was to create a haptic interface for a robotic thumb to be used in a laboratory setting. Given a constraint of two actuated
-				    degrees of freedom, we split the thumb motion into two groups: CMC ‘waggling’ or flexion and extension of the thumb and MCP/IP curling. These two 
-				    degrees of freedom make up two subsystems of our design as well as a third subsystem consisting of the thimble holster for a person’s thumb to fit 
-				    into which has a compliant degree of freedom for user comfort. The full system is shown in the figures below.
+                                The goal of the haptic thumb system (pictured above) was to create a haptic interface for the robotic thumb with two actuated degrees of freedom while providing 
+				a comfortable workspace for the user’s thumb.  Given this constraint, we broke down the thumb motion into two principal functional motions that we defined 
+				ourselves: CMC planar rotation ‘waggling’ of the thumb and MCP/IP 'curling'.  These two degrees of freedom make up two subsystems of our design as well as 
+				a third subsystem consisting of the thimble holster interface to the user’s thumb. The MCP/IP subsystem and the thimble subsystem each contain an unactuated 
+				passive degrees of freedom to provide greater comfort to the user during our curl motion. The mechanical system block diagram below depicts the subsystems and 
+				their major components and the decomposed motions are also depicted in the figure below
 
                             </p>
                     </div>
@@ -232,27 +234,88 @@
 		    <div>
                         <h2>Cable Routing</h2>
                             <p> 
-                                The haptic thumb system makes use of three vented screws: one in the CMC subsystem and two in the MCP/IP subsystem. The cable runs through 
-				these screws and is terminated at the other side.  The screws can then be tightened or loosened to tension the systems.
+                                The haptic thumb system makes use of three vented screws to tension the cables: one in the CMC subsystem and two in the MCP/IP subsystem. The configuration shown 
+				below creates a 1.4:1 coupling <br>
   
-				The CMC cable is wrapped around the CMC Motor Pulley and is terminated through a screw at one end of the system. The other side of the cable
-				is wired through the CMC plate (illustrated by the dashed pink line below) and is then wired through a vented screw and terminated.
+				The CMC cable is wrapped around the CMC Motor Pulley 3 times and is terminated through a wire-lockable screw at one end of the system. The other side of the cable 
+				is wired through the CMC plate (illustrated by the dashed pink line below) and is then wired through a vented screw and terminated with a copper crimp. The cable 
+				is tensioned off of the MC plate by unscrewing the vented screw in the counterclockwise direction against a wingnut. <br>
 
-				The MCP/IP cable is wrapped around the MCP/IP Motor Pulley and is wired through the CMC system through the use of several idler pulleys and shafts.
-				These allow for both motors to be placed in the CMC subsystem while providing movement to the MCP/IP subsystem without being affected by movement in the CMC subsystem. 
-				The cable then wraps around the MCP/IP Pulley which actuates the MCP/IP subsystem and then terminated through two vented screws in the MCP/IP Tensioning Block.
+				The MCP/IP cable is wrapped around the MCP/IP Motor Pulley 3 times, traversing through a drilled hole in the center of the pulley, and is wired across the CMC system 
+				through the use of 3 idler pulleys/shafts. The CMC idler pulley sits on the CMC shaft and allows the motor pulley to be remotized to the same location as the CMC 
+				motor pulley. This pulley has 2 grooves that allow for 1 wrap in each direction. The horizontal idler shaft is located between the CMC idler and the vertical 
+				idler shaft and guides one side of the cable to the location of the MCP/IP pulley, allowing the cable to approach the pulley perpendicularly to its surface. 
+				The vertical idler shaft is located between the horizontal idler shaft and the MCP/IP pulley, and guides one side of the cable towards the MCP/IP surface in a way 
+				that allows it to wrap tangentially in both directions. The cable is terminated at each end using copper crimps with a vented screw and wingnut that create tension 
+				in the cable by rotating in the counterclockwise direction off of a tensioning block and a hex nut underneath to lock the configuration. <br>
+
 
                             </p>
                     </div>
 
 		    <div>
-                        <h2>CAD Models</h2>
+                        <h2>CAD Model</h2>
                             <p> 
-                                The full design of the haptic thumb system is shown above.  The motors and connection points between the different subsystems are outlined. 
-				The CMC Side Plates provide a mounting point for the haptic thumb system to connect to the rest of the haptic system. The MCP Side Plates 
-				are attached to the CMC Plate to connect the CMC and MCP/IP systems together. The Phalanx Proxy Plates connect to the compliant Phalanx 
-				Distal Plate to connect the Thimble system to the rest of the haptic system. The Inner and Outer Thimble connect the user to the haptic system. 
-				Different views of the subsystems are shown below to highlight the different parts and features.
+                                The full CAD model of the haptic thumb system is shown above.  The motors and connection points between the different subsystems are outlined.  The CMC Side Plates provide
+				a mounting point for the haptic thumb system to connect to the rest of the haptic system.  The MCP Side Plates are attached to the CMC Plate to connect the CMC and MCP/IP 
+				systems together. The Phalanx Proximal Plates connect to the compliant Phalanx Distal Plate to connect the Thimble system to the rest of the haptic system.  The Inner and
+				Outer Thimble connect the user to the haptic system.  Different views of the subsystems are shown below to highlight the different parts and features. <br>
+
+				All bearings within the system are designed to be push fit with both the plates and the shafts. All plates should be manufactured using CNC milling and reaming, and 
+				shafts/pulleys were turned on the manual lathe. All components were designed to be made out of metal, with the exception of the inner thimble, which is designed to 
+				be made out of 3D printed TPU.
+
+
+                            </p>
+                    </div>
+		    
+		    <div>
+                        <h2>CMC Subsystem</h2>
+                            <p> 
+                                The CMC subsystem is depicted above, with joint limits set at 0° and 70° by a spacer separating the top and bottom plates. This subsystem utilizes a ~5:1 cable drive 
+				transmission ratio, determined by the radii of the CMC plate and CMC motor pulley. <br>
+
+				The assembly process begins with the top plate sub-assembly, which includes the CMC top plate, ECX 22 XL motors, 2-piece collar shafts, and motor pulleys. These components 
+				are assembled together to ensure alignment and secure attachment. Next, the CMC plate is assembled with the bottom plate, incorporating the CMC shaft and idler pulley. 
+				This step may require a clamp or a second set of hands to maintain alignment. At this point, the cable routing for the CMC is performed. The CMC cable is wrapped around 
+				the CMC motor pulley three times, terminated through a wire-lockable screw, and routed through the CMC plate, vented screw, and copper crimp. Once the cable is properly 
+				tensioned, the spacers between the top and bottom plates can be added. Finally, the horizontal idler shaft is installed on the CMC plate, completing the mechanical assembly
+				of the CMC subsystem.
+
+
+
+                            </p>
+                    </div>
+
+		    <div>
+                        <h2>MCP/IP Subsystem</h2>
+                            <p> 
+                                The components of the MCP/IP subsystem are depicted above. The active MCP joint is driven at a 3.5:1 transmission ratio due to the diameter of the MCP pulley and two sets of 
+				spacers contact the edge of the MCP side plates to create the mechanical joint limits providing 77 degrees of rotational motion. The MCP pulley is clearance fit on the MCP 
+				shaft and loctite was used to constrain the pulley rotation to the shaft rotation. As a result, the pulley as well as all of the proximal phalanx plates rotate together. 
+				This subsystem can be assembled separately from the CMC subsystem and attached at a later time, meaning that the CMC joint does not need to be re-tensioned if repairs or 
+				adjustments need to be made to the MCP/IP subsystem. <br>
+
+				Assembly for this subsystem involves locating all of the components (spacers, bearings, and plates) on the MCP shaft with the exception of the phalanx proximal plates. At 
+				the same time, the vertical idler shaft needs to be located within the bearings in the MCP side plates. Once the inner MCP pulley joint has been assembled, the outer phalanx
+				prox and phalanx prox L plates can be attached to the MCP shaft. The shaft and plates for the passive IP joint can be assembled before or after the assembly of the MCP.
+
+
+
+                            </p>
+                    </div>
+
+		    <div>
+                        <h2>Thimble</h2>
+                            <p> 
+                                The thimble subsystem is designed to provide comfortable but secure attachment between the user’s thumb tip and the haptic system. In order to accommodate multiple thumb sizes, 
+				multiple diameters of the thumb tip were printed out of TPU, a flexible polymer that allows for a more comfortable experience. The inner thimble piece can be easily removed and 
+				swapped for a different size by unscrewing the bolt that clamps the inner thimble. Multiple iterations of the thimble design were created, including a version that uses an 
+				elastic band that wraps around the proximal phalanx of the user’s thumb to secure the thimble on the thumb. Further testing is needed to determine whether the flexibility of TPU 
+				is sufficient to prevent slippage or if a more robust thumb attachment strategy is required. Additionally, the system lacks the roll degree of freedom for the thumb tip, which 
+				results in a moment around the thumb that could be potentially uncomfortable. Designing and implementing a lightweight but secure roll degree of freedom should be a focus in 
+				future iterations.
+
 
                             </p>
                     </div>
